--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,12 @@
   font-size:medium;
 }
 
-.body{
+body{
   height: 100vh;
   width: 100%;
 }
 
-.container{
+span{
+  display: block;
   margin-bottom: 40px;
 }
